Proyecto Individual/force-app/main/default/objects/Trail__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <summarizedField>Trail_Module__c.Points__c</summarizedField>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>