Proyecto Individual/force-app/main/default/objects/Trail__c/fields/Quantity_unit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_unit__c</fullName>
    <label>Quantity unit</label>
    <summarizedField>Trail_Module__c.Quantity_unit__c</summarizedField>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>