Proyecto Individual/force-app/main/default/objects/Trail__c/fields/Time_estimate__c.field-meta.xml
<CustomField>
    <fullName>Time_estimate__c</fullName>
    <label>Time estimate</label>
    <summarizedField>Trail_Module__c.Time_estimate__c</summarizedField>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>